--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -179,6 +179,8 @@
   "danger": "Erreur",
 	"database": "Base de données",
   "date": {
+	"day": "jour",
+	"day_plural": "jours",
     "year": "année"
   },
   "db": {
@@ -404,7 +406,8 @@
   },
   "loading": "Chargement des données depuis le serveur",
   "machine": {
-    "hardware_widget_title": "Détails de l'appareil"
+	"hardware_type_title": "Répartition par matériel",
+    	"hardware_widget_title": "Détails de l'appareil"
   },
   "managedinstalls": {
 		"failing_clients": "Clients avec erreurs d'installation",
@@ -550,6 +553,7 @@
 		"pdo": "Extension PDO",
 		"pdodrivers": "Base de données pilotes PDO",
 		"php": "PHP",
+		"soap": "Extension SOAP",
 		"version": "Version"
 		},
   "pkg_failed_to_install": "L'installation de __pkg__ a échouée : __reason__",
@@ -705,25 +709,74 @@
       "title": "Certificats"
     },
     "duplicate_computernames": {
-      "notfound": "Pas de doublons trouvés"
+      "notfound": "Pas de doublons trouvés",
+	"title": "Nom des ordinateurs dupliqués"
+	},
+	"manifest": {
+	"title": "Manifests"
+		},
+	"memory": {
+		"title": "Répartition par mémoire"
+		},
+		"modified_computernames": {
+			"title": "Pas de concordance avec les noms AD",
+			"tooltip": "Ordinateurs ne correspondants pas au nom AD"
     },
     "munki": {
-      "no_updates_pending": "Pas de mise à jour en attente"
+      "no_updates_pending": "Pas de mise à jour en attente",
+	"title": "Munki"
     },
     "munkiinfo": {
       "munkiprotocol": {
         "localrepo": "repo local",
         "http": "http",
-        "https": "https"
+        "https": "https",
+	"title": "Protocole Munki",
+	"tooltip": "Protocole Munki entre tous les clients"
       }
     },
+	"munki_versions": {
+			"title": "Versions Munki",
+			"tooltip": "Versions Munki entre tous les clients"
+		},
+		"network_location": {
+			"title": "Emplacements réseau"
+		},
+		"network_vlan": {
+			"title": "Vlans réseau"
+		},
+		"new_clients": {
+			"no_new_clients": "Pas de nouveau client",
+			"title": "Nouveaux clients",
+			"tooltip": "Clients enregistrés cette semaine"
+		},
+		"os": {
+			"title": "Répartition par OS"
+		},
+		"pending": {
+			"title": "Clients avec installation en attente"
+		},
+		"pending_apple": {
+			"title": "Mises à jour Apple en attente",
+			"tooltip": "Mises à jour Apple en attente pour cette semaine"
+		},
+		"pending_munki": {
+			"title": "Installations en attente",
+			"tooltip": "Installation en attente pour cette semaine"
+		},
     "power": {
+"health": {
+				"title": "Etat de santé de la batterie",
+				"tooltip": "Etat de santé de la batterie"
+			},
       "missing": "Manquant",
       "normal": "Normal",
       "now": "A remplacer maintenant",
       "service": "A entretenir maintenant",
       "soon": "A entretenir bientôt",
-      "nobattery": "Pas de batterie"
+      "nobattery": "Pas de batterie",
+	"title": "Etat de la batterie",
+			"tooltip": "Etat de la batterie"
     },
     "timemachine": {
       "lastweek": "Dernière sauvegarde effectuée il y a plus d'une journée",
@@ -733,9 +786,20 @@
       "b2g_ok": "Dernière sauvegarde de 2 semaines",
 	  "b2g_warning": "Dernière sauvegarde de 4 semaines",
 	  "b2g_danger": "Dernière sauvegarde de plus de 4 semaines"
+},
+		"unknown": {
+			"alert": "Ce widget ne peut être trouvé",
+			"title": "Widget inconnu"
+		},
+		"uptime": {
+			"title": "Temps de fonctionnement"
+		},
+		"warranty": {
+			"title": "Etat de la garantie"
     },
     "warrantysupport": {
-      "warrantyinfo": "Comptes pris en charge, Vintage, Obsolètes et Etat du support inconnu",
+	"title": "Comptes pris en charge, Vintage, Obsolètes, et état du support inconnu",
+      "warrantyinfo": "Comptes pris en charge, Vintage, Obsolètes et état du support inconnu",
       "warrentysupportstatus": "Etat de la garantie du support"
     }
   },
@@ -759,4 +823,3 @@
  },
 	"yes": "Oui"
 }
-
