revert bad changes to fr translation

--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -584,15 +584,7 @@
   "security": {
     "security": "Sécurité",
     "gatekeeper": "Etat Gatekeeper",
-    "gatekeeper_active": "Gatekeeper Active",
-    "gatekeeper_disabled": "Gatekeeper Disabled",
-    "sip": "Etat SIP",
-    "ssh_users": "SSH Users",
-    "ard_users": "ARD Users",
-    "firmwarepw": "Firmware Password",
-    "sip_status": "SIP Status",
-    "sip_active": "SIP Active",
-    "sip_disabled": "SIP Disabled"
+    "sip": "Etat SIP"
   },
   "serial": "Numéro de série",
   "servermetrics": {
