revert bad changes to de translation

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -446,8 +446,7 @@
       "location": "Standort-Bericht",
       "munki": "Munki-Bericht",
       "network": "Netzwerk-Bericht",
-      "power": "Strom-Bericht",
-      "security": "Security Report"
+      "power": "Strom-Bericht"
     },
     "user": {
       "logout": "Abmelden"
@@ -537,17 +536,7 @@
     "enrollment_status": "Enrollment Status"
   },
   "security": {
-    "security": "Security",
-    "gatekeeper": "Gatekeeper Status",
-    "gatekeeper_active": "Gatekeeper Active",
-    "gatekeeper_disabled": "Gatekeeper Disabled",
-    "sip": "SIP Status",
-    "ssh_users": "SSH Users",
-    "ard_users": "ARD Users",
-    "firmwarepw": "Firmware Password",
-    "sip_status": "SIP Status",
-    "sip_enabled": "SIP Active",
-    "sip_disabled": "SIP Disabled"
+    "security": "Security"
   },
   "serial": "Seriennummer",
   "servermetrics": {
