Add support for firmware mode

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -296,7 +296,8 @@
 	},
 	"firmware": {
 		"enabled_date": "Enable Date",
-		"firmware_password": "Firmware Password"
+		"firmware_password": "Firmware Password",
+		"firmware_mode": "Firmware Mode"
 	},
 	"free_disk_space": "Free Disk Space",
 	"free_disk_space_less_than": "Free Disk Space < __gb__GB",
