Remove stray quote
Fixes most of the English

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -330,7 +330,7 @@
 	"last_seen": "Last Seen",
 	"last_user": "Last User",
 	"listing": {
-		appusage": {
+		appusage: {
 			"appname": "App Name",
 			"appusage": "App Usage",
 			"appusagereport": "App Usage Report",
