Re-implement security module in python (#582)
* Re-write client script in python

re-implements security.sh script in python to make future changes easier
removes security.sh

* Update install/uninstall with new file names

* Update security model to parse plist instead of plain text

* Add two new column headings for security module

* Update interface to show new data

Adds SSH and ARD users to listing
Adds SSH and ARD users to summary tab
Enables colors for enabled/disabled on SIP and Gatekeeper in listing

* Add ARD and SSH user detection to security.py

Adds SSH user detection
Adds ARD user detection via plist - another method with bitmasks is
available but not yet functional.
Updates to add an OS version check before gatekeeper check

* Add SSH and ARD to model

Add SSH and ARD columns to model
Create migration 001 to add SSH with up/down functionality
Create migration 002 to add ARD with up/down functionality

* add firmware password to locales

* Update security model to v003 to add firmware pw field

* Add firmware password field to summary tab and security listing

* add firmware password detection to security module

* fix enabled/disabled highlighting error

* fix bug where language didn't match original bash implementation for SIP and GK

* add rudimentary sip status widget

* add SIP status

* bugfix on ARD user listing

If all users were allowed, the security.py script would return an empty
set. Corrected this by checking
/Library/Preferences/com.apple.RemoteManagement.plist for the global
allow key.

* Fix bug with SSH user listing

SSH user listing would error out if all users were permitted access.
Adds a check to see if SSH is enabled, and proper handling if SSH is
allowed to all users.

* make SIP widget business unit aware

* First draft of SIP widget

Since no filtering is done right now, the widget just links to the
security page.

* update locales with new security info, and ma

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -536,9 +536,7 @@
     "enrollment_status": "Enrollment Status"
   },
   "security": {
-    "security": "Security",
-    "gatekeeper": "Gatekeeper Status",
-    "sip": "SIP Status"
+    "security": "Security"
   },
   "serial": "Seriennummer",
   "servermetrics": {
