--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -495,7 +495,8 @@
 			"munki": "Munki Report",
 			"network": "Network Report",
 			"power": "Power Report",
-			"backup2go" : "Backup2go"
+			"backup2go" : "Backup2go",
+			"security": "Security Report"
 		},
 		"user": {
 			"logout": "Sign Off"
@@ -585,9 +586,18 @@
 	  "enrollment_status": "Enrollment Status"
 	},
 	"security": {
+		"report": "Security Report",
 		"security": "Security",
 		"gatekeeper": "Gatekeeper Status",
-		"sip": "SIP Status"
+		"gatekeeper_active": "Gatekeeper Active",
+		"gatekeeper_disabled": "Gatekeeper Disabled",
+		"sip": "SIP Status",
+		"ssh_users": "SSH Users",
+		"ard_users": "ARD Users",
+		"firmwarepw": "Firmware Password",
+		"sip_status": "SIP Status",
+		"sip_active": "SIP Active",
+		"sip_disabled": "SIP Disabled"
 	},
 	"serial": "Serial Number",
 	"servermetrics": {
