--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -405,9 +405,13 @@
 	},
 	"loading": "Loading data from server",
 	"machine": {
+		"arch": "Arch",
+		"cores": "Cores",
+		"cpu_speed": "CPU Speed",
 		"hardware_type_title": "Hardware type breakdown",
 		"hardware_widget_title": "Hardware model breakdown",
-		"model": "Model"
+		"model": "Model",
+		"rom_version": "ROM Version"
 	},
 	"managedinstalls": {
 		"failing_clients": "Clients with failing installs",
