Made requested changes
Localized widget tooltip, redundant database column and leftover
payload.zip bits

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -707,6 +707,10 @@
 		"app": {
 			"versions": "Known versions of __app__"
 		},
+        "appusage": {
+            "title": "App Usage",
+            "tooltip": "Most frequently used apps"
+        },
 		"bound_to_ds": {
 			"bound": "Bound",
 			"notbound": "Not Bound",
