App Usage Module (#585)
* added WiFi hardware check

Added WiFi hardware check, because some Macs don't have WiFi

* Fix for issue #525

Changed database headers to have underscores instead of dashes

* First commit of Appusage module

Pushed Appusage module

* Update widget location

Updated widget location and made size 4 instead of size 6

* Add App Usage to listings dropdown

Add App Usage to listings dropdown

* Update installation script and readme

Fixed bugs in installation script, added crankd already installed
check, and updated readme

* More installation checks

* Add download checks and fix unzip

makes launchctl quieter too

* Remove stray quote

Fixes most of the English

* Fix en.json

Put quotes back

* Fixed install.sh

* Fix db check

Check doesn't like symlinks :/

* Make cache dir

To prevent errors when touching cache file

* Reorder the listing columns

* Readme Update

* Reload crankd in install.sh

Make it pickup up new app usage duties

* Undo DS changes

* Added crankd payload

Don't know why this didn't get uploaded with the rest.

* Removed module installation of crankd

MR module will no longer install crankd

* Made requested changes

Localized widget tooltip, redundant database column and leftover
payload.zip bits

* Fixed widget title

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -330,6 +330,16 @@
 	"last_seen": "Last Seen",
 	"last_user": "Last User",
 	"listing": {
+		"appusage": {
+			"appname": "App Name",
+			"appusage": "App Usage",
+			"appusagereport": "App Usage Report",
+			"count": "Count",
+			"event": "Event",
+			"lastevent": "Last Event",
+			"launch": "Launch",
+			"quit": "Quit"
+		},
 		"ard": {
 			"text": "Text __number__",
 			"title": "Apple Remote Desktop Report"
@@ -458,6 +468,7 @@
 	        "ru": "Русский"
 		},
 		"listings": {
+			"appusage": "App Usage",
 			"ard": "Apple Remote Desktop",
 			"bluetooth": "Bluetooth",
 			"backup2go": "Archiware Backup2Go",
@@ -711,6 +722,10 @@
 		"app": {
 			"versions": "Known versions of __app__"
 		},
+        "appusage": {
+            "title": "App Usage",
+            "tooltip": "Most frequently used apps"
+        },
 		"bound_to_ds": {
 			"bound": "Bound",
 			"notbound": "Not Bound",
