Fixes missing entries...
...and unifies capitalization

--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -75,19 +75,19 @@
   },
   "bluetooth": {
 	"all_ok": "Aucun périphérique Bluetooth avec batterie faible",
-	"apple wireless keyboard": "Clavier Apple sans fil",
-	"apple wireless trackpad": "Trackpad Apple sans fil",
-	"apple magic mouse": "Apple Magic Mouse",
+	"apple_wireless_keyboard": "Clavier Apple sans fil",
+	"apple_wireless_trackpad": "Trackpad Apple sans fil",
+	"apple_magic_mouse": "Apple Magic Mouse",
     	"bluetooth": "Bluetooth",
-	 "bluetooth_battery_widget": "État de la batterie Bluetooth",
+	"bluetooth_battery_widget": "État de la batterie Bluetooth",
     	"keyboard": "État du clavier",
-	"magic keyboard": "Magic Keyboard",
-	"magic trackpad 2": "Magic Trackpad 2",
-	"magic mouse 2": "Magic Mouse 2",
-    "mouse": "État de la souris",
-    "panel_title": "Périphériques Bluetooth avec moins de 15% batterie",
-    "status": "État Bluetooth",
-    "trackpad": "État Trackpad"
+	"magic_keyboard": "Magic Keyboard",
+	"magic_trackpad_2": "Magic Trackpad 2",
+	"magic_mouse_2": "Magic Mouse 2",
+	"mouse": "État de la souris",
+	"panel_title": "Périphériques Bluetooth avec moins de 15% batterie",
+	"status": "État Bluetooth",
+	"trackpad": "État Trackpad"
   },
   "boot_time": "Démarré",
   "bundle_id": "BundleID",
