--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -233,7 +233,8 @@
         "dstudio-last-workflow-execution-date": "Last Workflow Execution Date",
         "dstudio-last-workflow-status": "Workflow Status",
         "dstudio-mac-addr": "MAC Address",
-        "recheck": "Pull DeployStudio Data"
+        "recheck": "Pull DeployStudio Data",
+        "report": "DeployStudio Report"
     },
 	"displayname": "Display Name",
 	"edit": "Edit",
@@ -506,14 +507,22 @@
 			"backup": "Backup Report",
 			"clients": "Client Report",
 			"configuration": "Configuration Report",
+            "directoryservice": "Directory Services Report",
+            "disk": "Disk Report",
 			"findmymac": "Find My Mac Report",
+            "gsx": "GSX Report",
 			"hardware": "Hardware Report",
 			"location": "Location Report",
 			"munki": "Munki Report",
 			"network": "Network Report",
 			"power": "Power Report",
+            "printer": "Printer Report",
+            "profile": "Profile Report",
 			"backup2go" : "Backup2go",
-			"security": "Security Report"
+            "sccm": "SCCM Agent Status Report",
+			"security": "Security Report",
+            "warranty": "Warranty Report",
+            "wifi": "WiFi Report"
 		},
 		"user": {
 			"logout": "Sign Off"
