Add caching report listing

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -100,9 +100,17 @@
 	"buildversion": "Build Version",
 	"caching": {
 		"bytes_served": "Caching – Bytes Served",
+		"client_requests": "Requests From Clients",
+		"date": "Date",
 		"from_origin": "From Origin",
 		"from_peers": "From Peers",
-		"from_cache": "From Cache"
+		"from_cache": "From Cache",
+		"peer_requests": "Requests From Peers",
+		"purged_1": "Purged Younger Than 1 Day",
+		"purged_7": "Purged Younger Than 7 Days",
+		"purged_30": "Purged Younger Than 30 Days",
+		"reporttitle": "Caching Server Report",
+		"total_purged": "Total Purged"
 	},
 	"cert": {
 		"expired": "__name__ expired __moment__"
