--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -104,17 +104,39 @@
 	},
 	"buildversion": "Build Version",
 	"caching": {
+		"bytesdropped": "Bytes Dropped",
+		"bytesfromcachetoclients": "Bytes from Cache to Clients",
+		"bytesfromcachetopeers": "Bytes from Cache to Peers",
+		"bytesfromorigintoclients": "Bytes from Origin to Clients",
+		"bytesfromorigintopeers": "Bytes from Origin to Peers",
+		"bytesfrompeerstoclients": "Bytes from Peers to Clients",
+		"bytesimportedbyxpc": "Bytes Imported by XPC",
+		"bytesimportedbyhttp": "Bytes Imported by HTTP",
+		"bytespurgedtotal": "Total Bytes Purged",
+		"bytespurgedyoungerthan1day": "Bytes Purged Younger than 1 Day",
+		"bytespurgedyoungerthan7days": "Bytes Purged Younger than 7 Days",
+		"bytespurgedyoungerthan30days": "Bytes Purged Younger than 30 Days",
 		"bytes_served": "Caching – Bytes Served",
 		"client_requests": "Requests From Clients",
+		"client_tab_title": "Caching Server",
 		"date": "Date",
 		"from_origin": "From Origin",
 		"from_peers": "From Peers",
 		"from_cache": "From Cache",
+		"importsbyhttp": "Imports by HTTP",
+		"importsbyxpc": "Imports by XPC",
 		"peer_requests": "Requests From Peers",
 		"purged_1": "Purged Younger Than 1 Day",
 		"purged_7": "Purged Younger Than 7 Days",
 		"purged_30": "Purged Younger Than 30 Days",
+		"repliesfromcachetoclients": "Replies from Cache to Clients",
+		"repliesfromcachetopeers": "Replies from Cache to Peers",
+		"repliesfrompeerstoclients": "Replies from Peers to Clients",
+		"repliesfromorigintoclients": "Replies from Origin to Clients",
+		"repliesfromorigintopeers": "Replies from Origin to Peers",
 		"reporttitle": "Caching Server Report",
+		"requestsfromclients": "Requests from Clients",
+		"requestsfrompeers": "Requests from Peers",
 		"total_purged": "Total Purged"
 	},
 	"cert": {
