Bug fixes found by eholtam
order of dates in caching client tab, client tab load (by making 'is'
into '='), made origin on widget blue, clicking on widget loads caching
listing, caching now properly shows up in listings drop down

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -509,6 +509,7 @@
 			"ard": "Apple Remote Desktop",
 			"bluetooth": "Bluetooth",
 			"backup2go": "Archiware Backup2Go",
+			"caching": "Caching",
 			"clients": "Clients",
 			"certificate": "Certificates",
 			"deploystudio": "DeployStudio",
@@ -541,6 +542,7 @@
 			"appVersions": "App Versions Report",
 			"backup": "Backup Report",
 			"backup2go" : "Backup2Go Report",
+			"caching": "Caching",
 			"clients": "Client Report",
 			"configuration": "Configuration Report",
 			"directoryservice": "Directory Services Report",
