Add Server report

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -558,6 +558,7 @@
 			"profile": "Profile Report",
 			"sccm": "SCCM Agent Status Report",
 			"security": "Security Report",
+			"server": "Server Report",
 			"warranty": "Warranty Report",
 			"wifi": "WiFi Report"
 		},
