--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -363,16 +363,6 @@
 		"report": "Inventory Report"
 	},
 	"keyboard": "Keyboard",
-    "kb_mouse": {
-		"kb_mouse": "Keyboard and Mouse",
-		"title": "Keyboard and Mouse",
-		"ext_kb_st": "Ext. KB Status",
-		"ext_kb_nm": "Ext. KB Name",
-		"ext_mouse_st": "Ext. Mouse Status",
-		"ext_mouse_nm": "Ext. Mouse Name",
-		"int_tp_st": "Int. TP Status",
-		"int_tp_nm": "Int. TP Name"
-    },
 	"last_seen": "Last Seen",
 	"last_user": "Last User",
 	"listing": {
@@ -530,7 +520,6 @@
 			"gsx": "GSX",
 			"hardware": "Hardware",
 			"inventory": "Inventory",
-			"kb_mouse": "Keyboard and Mouse",
 			"location": "Location",
 			"munki": "Munki",
 			"network": "Network",
@@ -540,6 +529,7 @@
 			"sccm_status": "SCCM Status",
 			"security": "Security",
 			"timemachine": "Time Machine",
+			"usb": "USB Devices",
 			"warranty": "Warranty",
 			"wifi": "WiFi"
 		},
@@ -749,6 +739,22 @@
 	"unencrypted": "Unencrypted",
 	"unknown": "Unknown",
 	"unsupported": "Not Supported",
+	"usb": {
+		"bus_power": "Available mAh",
+		"bus_power_used": "Used mAh",
+		"camera": "Camera",
+        "clienttab": "USB Devices",
+		"device_speed": "USB Protocol",
+		"extra_current_used": "Extra mAh",
+		"internal": "Internal",
+		"manufacturer": "Manufacturer",
+		"media": "Removable Media",
+		"name": "Device Name",
+		"reporttitle": "USB Devices Report",
+		"title": "Keyboard and Mouse",
+		"type": "Device Type",
+		"vendor_id": "Vendor ID"
+	},  
 	"uptime": "Uptime",
 	"user": {
 		"user": "User",
