Fixed version column on MySQL
and renamed listing to prevent conflicts with Munki listing

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -530,7 +530,7 @@
 			"inventory": "Inventory",
 			"location": "Location",
 			"munki": "Munki",
-			"munkireportinfo": "MunkiReport",
+			"mrinfo": "MunkiReport",
 			"network": "Network",
 			"power": "Power",
 			"printers": "Printers",
