Software Update module (#603)
* commit of software update module

* Update loading column amount

* Fix for INTs on MySQL

Thanks eholtam!

* Update ReadMe.md

Blank entries mean default data

* Aligning whitespace

* Fixed client_tab always showing "No"

* Added ignored updated and fixed 1969 problem

* Fixed another int error

* Set int values

* another int attempt

* Finally fixed the MySQL int problem

ugh

* Cleanup of model

* Fixed spelling errors and removed echo

(I'm not very good at spelling)

* Localized client tab's yes/no

Thanks bochoven!

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -537,6 +537,7 @@
 			"profile": "Profiles",
 			"sccm_status": "SCCM Status",
 			"security": "Security",
+			"softwareupdate": "Software Update",
 			"timemachine": "Time Machine",
 			"usb": "USB Devices",
 			"warranty": "Warranty",
@@ -698,6 +699,28 @@
 		"software": "Software",
 		"smc_version": "SMC Version",
 		"boot_rom_version": "Boot ROM Version"
+	},
+	"softwareupdate": {
+		"automaticcheckenabled": "Auto Check Enabled",
+		"automaticdownload": "Auto Download",
+		"catalogurl": "Catalog URL",
+		"clienttabtitle": "Software Updates",
+		"configdatainstall": "Auto Install XProtect",
+		"criticalupdateinstall": "Install Critical",
+		"inactiveupdates": "Ignored Updates",
+		"lastattemptsystemversion": "Version Attempted",
+		"lastbackgroundccdsuccessfuldate": "Background CCD Success Date",
+		"lastbackgroundsuccessfuldate": "Background Success Date",
+		"lastfullsuccessfuldate": "Full Success Date",
+		"lastrecommendedupdatesavailable": "Recommended Available Updates",
+		"lastresultcode": "Result Code",
+		"lastsessionsuccessful": "Session Successful",
+		"lastsuccessfuldate": "Successful Date",
+		"lastupdatesavailable": "Updates Available",
+		"mrxprotect": "XProtect Install",
+		"reporttitle": "Software Update Report",
+		"skiplocalcdn": "Skip Local CDN",
+		"recommendedupdates": "Recommended Updates"
 	},
 	"status": "Status",
 	"storage": {
