--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -446,6 +446,7 @@
 		"latitudeaccuracy": "Latitude Accuracy",
 		"longitude": "Longitude",
 		"longitudeaccuracy": "Longitude Accuracy",
+		"never": "Never",
 		"report": "Location Report",
 		"stalelocation": "Stale Location"
 	},
