Add peripheral report

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -564,6 +564,7 @@
 			"location": "Location Report",
 			"munki": "Munki Report",
 			"network": "Network Report",
+			"peripheral": "Peripheral Report",
 			"power": "Power Report",
 			"printer": "Printer Report",
 			"profile": "Profile Report",
