--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -94,7 +94,7 @@
 		"trackpad": "Trackpad Status"
 	},
 	"boot_time": "Booted",
-	"bundle_id": "BundleID",
+	"bundle_id": "Bundle ID",
 	"business_unit": {
 		"disabled": "Business Units Disabled",
 		"machine_group": "Machine Group",
@@ -186,7 +186,7 @@
 		}
 	},
 	"configuration": "Configuration",
-    "connected": "Connected",
+	"connected": "Connected",
 	"cpu": {
 		"arch": "CPU Architecture",
 		"core": "core",
@@ -237,40 +237,79 @@
 	"disabled": "Disabled",
 	"disconnected": "Disconnected",
 	"displays": {
+		"internal": "Built-In",
 		"displays": "Displays",
+		"display_serial": "Serial",
+		"external": "External",
+		"vendor": "Vendor",
+		"model": "Model",
+		"manufactured": "Manufacture Date",
+		"native": "Native Resolution",
+		"timestamp": "Was Last Connected",
+		"type": "Type",
 		"widget_info": "Total number of known external displays",
 		"widget_title": "External Displays Count"
 	},
-    "ds": {
+	"directoryservice": {
+		"clienttabtitle": "Directory Service",
+		"which_directory_service": "Directory Service Used",
+		"directory_service_comments": "Active Directory Comments",
+		"adforest": "Active Directory Forest",
+		"addomain": "Active Directory Domain",
+		"computeraccount": "Computer Account",
+		"user_experience": "Advanced Options - User Experience",
+		"createmobileaccount": "Create Mobile Account at Login",
+		"requireconfirmation": "Require Confirmation",
+		"forcehomeinstartup": "Force Home to Startup Disk",
+		"mounthomeassharepoint": "Mount Home as Sharepoint",
+		"usewindowsuncpathforhome": "Use Windows UNC Path for Home",
+		"networkprotocoltobeused": "Network Protocol to be Used",
+		"defaultusershell": "Default User Shell",
+		"mappings": "Advanced Options - Mappings",
+		"mappinguidtoattribute": "Mapping UID to Attribute",
+		"mappingusergidtoattribute": "Mapping User GID to Attribute",
+		"mappinggroupgidtoattr": "Mapping Group GID to Attribute",
+		"generatekerberosauth": "Generate Kerberos Authority",
+		"administrative": "Advanced Options - Administrative",
+		"preferreddomaincontroller": "Preferred Domain Controller",
+		"allowedadmingroups": "Allowed Admin Groups",
+		"authenticationfromanydomain": "Authentication From Any Domain",
+		"packetsigning": "Packet Signing",
+		"packetencryption": "Packet Encryption",
+		"passwordchangeinterval": "Password Change Interval",
+		"restrictdynamicdnsupdates": "Restrict Dynamic DNS Updates",
+		"namespacemode": "Namespace Mode"
+	},
+	"ds": {
 		"computername": "Computer Name",
-        "architecture": "Architecture",
-        "dstudio-auto-disable": "Auto Disable",
-        "dstudio-auto-reset-workflow": "Auto Reset Workflow",
-        "dstudio-auto-started-workflow": "Auto Started Workflow",
-        "dstudio-bootcamp-windows-computer-name": "Boot Camp Windows Name",
-        "dstudio-completed": "Completed",
-        "dstudio-disabled": "Disabled",
-        "dstudio-failed": "Failed",
-        "dstudio-group": "Group",
-        "dstudio-host-ard-field-1": "ARD Field 1",
-        "dstudio-host-ard-field-2": "ARD Field 2",
-        "dstudio-host-ard-field-3": "ARD Field 3",
-        "dstudio-host-ard-field-4": "ARD Field 4",
-        "dstudio-host-ard-ignore-empty-fields": "Ignore Empty ARD Fields",
-        "dstudio-host-delete-other-locations": "Delete Other Locations",
-        "dstudio-host-model-identifier": "Model Identifier",
-        "dstudio-hostname": "Hostname",
-        "dstudio-host-new-network-location": "New Network Location",
-        "dstudio-host-serial-number": "Serial Number",
-        "dstudio-host-type": "Host Type",
-        "dstudio-last-workflow": "Last Workflow Run",
-        "dstudio-last-workflow-duration": "Last Workflow Duration",
-        "dstudio-last-workflow-execution-date": "Last Workflow Execution Date",
-        "dstudio-last-workflow-status": "Workflow Status",
-        "dstudio-mac-addr": "MAC Address",
-        "recheck": "Pull DeployStudio Data",
-        "report": "DeployStudio Report"
-    },
+		"architecture": "Architecture",
+		"dstudio-auto-disable": "Auto Disable",
+		"dstudio-auto-reset-workflow": "Auto Reset Workflow",
+		"dstudio-auto-started-workflow": "Auto Started Workflow",
+		"dstudio-bootcamp-windows-computer-name": "Boot Camp Windows Name",
+		"dstudio-completed": "Completed",
+		"dstudio-disabled": "Disabled",
+		"dstudio-failed": "Failed",
+		"dstudio-group": "Group",
+		"dstudio-host-ard-field-1": "ARD Field 1",
+		"dstudio-host-ard-field-2": "ARD Field 2",
+		"dstudio-host-ard-field-3": "ARD Field 3",
+		"dstudio-host-ard-field-4": "ARD Field 4",
+		"dstudio-host-ard-ignore-empty-fields": "Ignore Empty ARD Fields",
+		"dstudio-host-delete-other-locations": "Delete Other Locations",
+		"dstudio-host-model-identifier": "Model Identifier",
+		"dstudio-hostname": "Hostname",
+		"dstudio-host-new-network-location": "New Network Location",
+		"dstudio-host-serial-number": "Serial Number",
+		"dstudio-host-type": "Host Type",
+		"dstudio-last-workflow": "Last Workflow Run",
+		"dstudio-last-workflow-duration": "Last Workflow Duration",
+		"dstudio-last-workflow-execution-date": "Last Workflow Execution Date",
+		"dstudio-last-workflow-status": "Workflow Status",
+		"dstudio-mac-addr": "MAC Address",
+		"recheck": "Pull DeployStudio Data",
+		"report": "DeployStudio Report"
+	},
 	"displayname": "Display Name",
 	"edit": "Edit",
 	"email": {
@@ -300,9 +339,19 @@
 	"failed": "Failed",
 	"failing": "Failing!",
 	"filevault": {
+		"status_last_checkin": "Status as of ",
+		"enableddate": "Enable Date",
+		"encrypted": "Encrypted",
+		"filevault_users": "Enabled User(s)",
+		"recoverykey": "Personal Recovery Key",
+		"lvguuid": "Logical Volume Group UUID",
+		"lvuuid": "Logical Volume UUID",
+		"pvuuid": "Physical Volume UUID",
+		"hddserial": "Hard Drive Serial Number",
+		"unencrypted": "Unencrypted",
 		"users": "FileVault Enabled users",
 		"widget": {
-			"title": "FileVault 2 status"
+			"title": "FileVault 2 Status"
 		}
 	},
 	"filter": {
@@ -492,6 +541,15 @@
 		"warning_plural": "__count__ Munki warnings",
 		"additional_info": "Additional Munki Info"
 	},
+	"munkiinfo": {
+		"softwarerepourl": "Software Repo URL",
+		"localonlymanifest": "Run Type",
+		"duration": "Duration",
+		"applecatalog": "Apple Catalog URL",
+		"manifest": "Manifest",
+		"localonlymanifest": "Local Only Manifest",
+		"start": "Start"
+	},
 	"munkireportinfo": {
 		"baseurl": "MunkiReport URL",
 		"clienttabtitle": "MunkiReport",
@@ -635,6 +693,17 @@
 	},
 	"pkg_failed_to_install": "__pkg__ failed to install: __reason__",
 	"pkg_failed_to_install_plural": "__count__ packages failed to install",
+	"power": {
+		"manufacture_date": "Manufacture Date",
+		"design_capacity": "Design Capacity (mAh)",
+		"max_capacity": "Full Charge Capacity (mAh)",
+		"max_percent": "Health %",
+		"current_capacity": "Charge Remaining (mAh)",
+		"current_percent": "Charged %",
+		"cycle_count": "Cycle Count",
+		"temperature": "Temperature",
+		"condition": "Condition"
+	},
 	"ratio": "Ratio",
 	"reg_date": "Registration Date",
 	"remote_control": "Remote Control",
@@ -652,15 +721,15 @@
 		"url": "URL"
 	},
 	"sccm_status": {
-	  "title": "SCCM Agent Status",
-	  "titleheader": "SCCM Agent Information",
-	  "agent_status": "SCCM Agent Status",
-	  "mgmt_point": "Management Point",
-	  "enrollment_name": "Enrollment User Name",
-	  "enrollment_server": "Enrollment Server",
-	  "last_checkin": "Last SCCM Check In",
-	  "cert_exp": "SCCM Client Certificate Expiration",
-	  "enrollment_status": "Enrollment Status"
+		"title": "SCCM Agent Status",
+		"titleheader": "SCCM Agent Information",
+		"agent_status": "SCCM Agent Status",
+		"mgmt_point": "Management Point",
+		"enrollment_name": "Enrollment User Name",
+		"enrollment_server": "Enrollment Server",
+		"last_checkin": "Last SCCM Check In",
+		"cert_exp": "SCCM Client Certificate Expiration",
+		"enrollment_status": "Enrollment Status"
 	},
 	"security": {
 		"report": "Security Report",
@@ -777,7 +846,7 @@
 		"bus_power": "Available mAh",
 		"bus_power_used": "Used mAh",
 		"camera": "Camera",
-        "clienttab": "USB Devices",
+		"clienttab": "USB Devices",
 		"device_speed": "USB Protocol",
 		"extra_current_used": "Extra mAh",
 		"internal": "Internal",
@@ -837,7 +906,7 @@
 			"graph_title": "Historical Caching Bytes Served",
 			"title": "Caching Bytes Served",
 			"tooltip": "Data that has been served from OS X Server's Caching Server"
-        },
+		},
 		"certificate": {
 			"expired": "Expired",
 			"ok": "Valid for more than three months",
@@ -864,11 +933,11 @@
 		},
 		"munkiinfo": {
 			"munkiprotocol": {
-				"localrepo": "local repo",
+				"localrepo": "Local Repo",
 				"http": "http",
 				"https": "https",
 				"title": "Munki Protocol",
-				"tooltip": "Munki Protocol among all clients"
+				"tooltip": "Munki protocol among all clients"
 			}
 		},
 		"munki_versions": {
@@ -879,7 +948,7 @@
 			"title": "Network Locations"
 		},
 		"network_vlan": {
-			"title": "Network VLANss"
+			"title": "Network VLANs"
 		},
 		"new_clients": {
 			"no_new_clients": "No new clients",
@@ -936,29 +1005,29 @@
 		"warranty": {
 			"title": "Warranty Status"
 		},
-        "warrantysupport":{
+		"warrantysupport":{
 			"title": "Counts Supported, Vintage, Obsolete, and Unknown support status",
-            "warrantyinfo": "Counts Supported, Vintage, Obsolete, and Unknown support status",
-            "warrentysupportstatus": "Warranty Support Status"
-        }
-	},
-    "wifi": {
-        "apmode": "Access Point Mode",
-        "bssid": "BSSID",
-        "channel": "Channel",
-        "extrssi": "External RSSI",
-        "lasttrx": "Last Transmit Rate (Mbps)",
-        "maxtrx": "Maximum Transmit Rate (Mbps)",
-        "networks": "WiFi Networks",
-        "noise": "Noise Level",
-        "nonetworks": "No Networks",
-        "rssilevel": "RSSI Level",
-        "sharing": "Sharing",
-        "state": "WiFi State",
-        "ssid": "SSID",
-        "xauthtype": "802.11X Authentication Type",
-        "wifiauthtype": "WiFi Authentication Type",
-        "wifiinfo": "WiFi Information"
-    },
+			"warrantyinfo": "Counts Supported, Vintage, Obsolete, and Unknown support status",
+			"warrentysupportstatus": "Warranty Support Status"
+			}
+		},
+		"wifi": {
+			"apmode": "Access Point Mode",
+			"bssid": "BSSID",
+			"channel": "Channel",
+			"extrssi": "External RSSI",
+			"lasttrx": "Last Transmit Rate (Mbps)",
+			"maxtrx": "Maximum Transmit Rate (Mbps)",
+			"networks": "WiFi Networks",
+			"noise": "Noise Level",
+			"nonetworks": "No Networks",
+			"rssilevel": "RSSI Level",
+			"sharing": "Sharing",
+			"state": "WiFi State",
+			"ssid": "SSID",
+			"xauthtype": "802.11X Authentication Type",
+			"wifiauthtype": "WiFi Authentication Type",
+			"wifiinfo": "WiFi Information"
+		},
 	"yes": "Yes"
 }
