--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -751,7 +751,11 @@
 	"printer": {
 		"default_set": "Default Set",
 		"driver_version": "Driver Version",
+		"error": "Error",
+		"idle": "Idle",
+		"in_use": "In Use",
 		"name": "Printer Name",
+		"offline": "Offline",
 		"ppd": "PPD",
 		"printer_sharing": "Printer Sharing",
 		"printer_status": "Printer Status",
