Localize more listings and tabs...
...fixed Munki listing, added encryption status to disk listing,
adjusting whitespace

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -680,7 +680,7 @@
 		"ip_address": "IP Address",
 		"network": "Network",
 		"mask": "Mask",
-		"prefix_length": "Prefix length",
+		"prefix_length": "Prefix Length",
 		"router": "Router",
 		"traffic": "Network Traffic",
 		"inbound_traffic": "Inbound Traffic",
